syntax = "proto3";

service UserManage {
    rpc GetUserListByOffstAndLimit(GetUserListReq) returns (UserListRsp) {}
}

message GetUserListReq {
    int32 offset = 1;
    int32 limit = 2;
    int64 manageId = 3;
}

message UserMesssage {
    int64 id = 1;
    string login_name = 2;
    string pwd = 3;
    string name = 4;
    string phone_number = 5;
    string job_number = 6;
    int32 permission = 7;
    int32 gender = 8;
    bool deleted = 9;
}

message UserListRsp {
    repeated UserMesssage userList= 1;
}

